kafka/control-center-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: control-center
  name: control-center-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-center
  strategy: {}
  template:
    metadata:
      labels:
        app: control-center
    spec:
      containers:
        - env:
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: 'kafka-service:9092'
            - name: KAFKA_CLUSTERS_0_NAME
              value: MataElangKafkaCluster
            - name: KAFKA_CLUSTERS_0_ZOOKEEPER
              value: 'zookeeper-service:2181'
          image: provectuslabs/kafka-ui
          name: control-center
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: "805306368"
            requests:
              cpu: 250m
              memory: "402653184"
      restartPolicy: Always
