kafka/kafka-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  serviceName: kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - image: confluentinc/cp-kafka:7.3.0
          command:
            - sh
            - -c
            - "rm -rf /var/lib/kafka/data/lost+found \
              && exec kafka-server-start /etc/kafka/server.properties \
              --override log.dirs=/var/lib/kafka/data --override advertised.listeners=INTERNAL://kafka-service:9092,EXTERNAL://kafka-service:9093 \
              --override zookeeper.connect=zookeeper-service:2181 --override listeners=INTERNAL://kafka-service:9092,EXTERNAL://kafka-service:9093 \
              --override inter.broker.listener.name=INTERNAL --override allow.plaintext.listener=yes \
              --override transaction.state.log.replication.factor=1 --override transaction.state.log.min.isr=1 \
              --override offsets.topic.replication.factor=1 --override log.segment.bytes=536870912 \
              --override log.retention.ms=86400000 --override log.retention.bytes=536870912 \
              --override broker.id=1 --override listener.security.protocol.map=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
          name: kafka-broker
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            limits:
              cpu: 500m
              memory: "2147483648"
            requests:
              cpu: 100m
              memory: "1073741824"
          volumeMounts:
            - mountPath: /var/lib/kafka/data
              name: kafka-data
      restartPolicy: Always
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-data
