kafka/zookeeper-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/tes-default: "true"
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  containers:
    - env:
        - name: ZOOKEEPER_CLIENT_PORT
          value: "2181"
        - name: ZOOKEEPER_TICK_TIME
          value: "2000"
      image: confluentinc/cp-zookeeper:7.3.0
      name: zookeeper
      resources:
        limits:
          cpu: 500m
          memory: "536870912"
        requests:
          cpu: 250m
          memory: "268435456"
      volumeMounts:
        - mountPath: /var/lib/zookeeper/data
          name: zookeeper-data
        - mountPath: /var/lib/zookeeper/log
          name: zookeeper-log
  restartPolicy: OnFailure
  volumes:
    - name: zookeeper-data
      persistentVolumeClaim:
        claimName: zookeeper-data
    - name: zookeeper-log
      persistentVolumeClaim:
        claimName: zookeeper-log
status: {}
