kafka/control-center-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: control-center
  name: control-center
spec:
  ports:
    - name: "9021"
      port: 9021
      targetPort: 8080
  selector:
    io.kompose.service: control-center
status:
  loadBalancer: {}
