kafka/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
  name: kafka-ui-service
spec:
  ports:
    - name: "9021"
      port: 9021
      targetPort: 8080
  selector:
    app: kafka-ui
