kafka/mqtt-source-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-kafka-connector-service
spec:
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app: connector
